# extractapp

./: .gitattributes  .gitignore  README.md  demo.py  pyproject.toml  requirements.txt  start.cmd
.github/workflows/: ci.yml
docs/: CHANGELOG.md  spec.md  taxonomy.md
pipeline/: __init__.py  battery.py  grounding.py  load.py  localize.py  numbers.py  readers.py  reconcile.py  reliability.py  segment.py  validate.py
tests/: test_battery.py  test_determinism.py  test_golden.py  test_grounding.py  test_load.py  test_localize.py  test_numbers.py  test_readers.py  test_reconcile.py  test_reliability.py  test_segment.py
tests/golden/: corpus.py
