[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "extractapp"
version = "3.0.0a"
description = "Autonomous single-pass reliability layer for meta-analysis data extraction (quarantine-over-guess)."
requires-python = ">=3.10"
readme = "README.md"

[tool.setuptools]
packages = ["pipeline"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
